objects/BatchBonifiche__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>PassoSchedulazione__c</fullName>
        <label>PassoSchedulazione</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SizeBatch__c</fullName>
        <label>SizeBatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sogliaMinuti__c</fullName>
        <defaultValue>0</defaultValue>
        <label>sogliaMinuti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BatchBonifiche</label>
</CustomObject>